# spacelyzer

./: .gitignore  README.md  SPACELYZER.md  pyproject.toml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
spacelyzer/: __main__.py  analyzer.py  cli.py  exceptions.py  fingerprint.py  formatter.py  renderer.py  scanner.py  similarity.py  snapshots.py  suggestions.py  watch.py
tests/: test_spacelyzer.py
